--- a/notes/力扣刷题.md
+++ b/notes/力扣刷题.md
@@ -8071,3 +8071,78 @@ public class second {
 
 ```
 
+
+
+
+
+##### [根据身高重建队列](https://leetcode-cn.com/problems/queue-reconstruction-by-height/)
+
+假设有打乱顺序的一群人站成一个队列，数组 people 表示队列中一些人的属性（不一定按顺序）。每个 people[i] = [hi, ki] 表示第 i 个人的身高为 hi ，前面 正好 有 ki 个身高大于或等于 hi 的人。
+
+请你重新构造并返回输入数组 people 所表示的队列。返回的队列应该格式化为数组 queue ，其中 queue[j] = [hj, kj] 是队列中第 j 个人的属性（queue[0] 是排在队列前面的人）。
+
+```
+示例 1：
+
+输入：people = [[7,0],[4,4],[7,1],[5,0],[6,1],[5,2]]
+输出：[[5,0],[7,0],[5,2],[6,1],[4,4],[7,1]]
+解释：
+编号为 0 的人身高为 5 ，没有身高更高或者相同的人排在他前面。
+编号为 1 的人身高为 7 ，没有身高更高或者相同的人排在他前面。
+编号为 2 的人身高为 5 ，有 2 个身高更高或者相同的人排在他前面，即编号为 0 和 1 的人。
+编号为 3 的人身高为 6 ，有 1 个身高更高或者相同的人排在他前面，即编号为 1 的人。
+编号为 4 的人身高为 4 ，有 4 个身高更高或者相同的人排在他前面，即编号为 0、1、2、3 的人。
+编号为 5 的人身高为 7 ，有 1 个身高更高或者相同的人排在他前面，即编号为 1 的人。
+因此 [[5,0],[7,0],[5,2],[6,1],[4,4],[7,1]] 是重新构造后的队列。
+
+```
+
+```java
+    /**
+     * 根据身高重建队列
+     * 假设有打乱顺序的一群人站成一个队列，数组 people 表示队列中一些人的属性（不一定按顺序）。每个 people[i] = [hi, ki] 表示第 i 个人的身高为 hi ，前面 正好 有 ki 个身高大于或等于 hi 的人。
+     *
+     * 请你重新构造并返回输入数组 people 所表示的队列。返回的队列应该格式化为数组 queue ，其中 queue[j] = [hj, kj] 是队列中第 j 个人的属性（queue[0] 是排在队列前面的人）。
+     *
+     * 输入：people = [[7,0],[4,4],[7,1],[5,0],[6,1],[5,2]]
+     * 输出：[[5,0],[7,0],[5,2],[6,1],[4,4],[7,1]]
+     * 解释：
+     * 编号为 0 的人身高为 5 ，没有身高更高或者相同的人排在他前面。
+     * 编号为 1 的人身高为 7 ，没有身高更高或者相同的人排在他前面。
+     * 编号为 2 的人身高为 5 ，有 2 个身高更高或者相同的人排在他前面，即编号为 0 和 1 的人。
+     * 编号为 3 的人身高为 6 ，有 1 个身高更高或者相同的人排在他前面，即编号为 1 的人。
+     * 编号为 4 的人身高为 4 ，有 4 个身高更高或者相同的人排在他前面，即编号为 0、1、2、3 的人。
+     * 编号为 5 的人身高为 7 ，有 1 个身高更高或者相同的人排在他前面，即编号为 1 的人。
+     * 因此 [[5,0],[7,0],[5,2],[6,1],[4,4],[7,1]] 是重新构造后的队列。
+     *
+     *
+     * 这道题目和之前做到分发糖果很相似，都有两个条件需要考虑
+     *
+     * 思路：先从一个条件出发，得出符合题目要求的规律后，再从另一个方面出发
+     * 此题有两个条件：1、H:人的身高 2、K:比当前人高的数目
+     *
+     * 此题从身高出发比较好，若从K开始进行排序，从大到小排序发现整个队列是混乱的，而从身高开始从大到小可以保证身高的顺序是确定的。
+     * 多个条件肯定是要从有规律的一方开始着手，也不要两个一起考虑会把问题复杂化
+     *
+     * 身高排列好，按照：身高高的开始，根据k来重新组合顺序，最后使得身高和K符合所在的位置
+     */
+    public static int[][] reconstructQueue(int[][] people) {
+        //身高排序：从大到小,身高相同k小的位于前面
+        Arrays.sort(people, (Comparator<int[]>) (o1, o2) -> {
+            if (o1[0] == o2[0]){
+                return   o1[1] - o2[1];
+            }else {
+               return o2[0] - o1[0];
+            }
+        });
+
+        //按照身高高的K开始,根据k的位置添加到对应的数组中，这里使用链表进行添加
+        List<int[]> lists = new LinkedList<>();
+        for (int[] list: people) {
+            lists.add(list[1],list);
+        }
+
+        return lists.toArray(new int[lists.size()][]);
+    }
+```
+
