--- a/notes/力扣刷题.md
+++ b/notes/力扣刷题.md
@@ -8146,3 +8146,161 @@ public class second {
     }
 ```
 
+
+
+##### [用最少数量的箭引爆气球](https://leetcode-cn.com/problems/minimum-number-of-arrows-to-burst-balloons/)
+
+在二维空间中有许多球形的气球。对于每个气球，提供的输入是水平方向上，气球直径的开始和结束坐标。由于它是水平的，所以纵坐标并不重要，因此只要知道开始和结束的横坐标就足够了。开始坐标总是小于结束坐标。
+
+一支弓箭可以沿着 x 轴从不同点完全垂直地射出。在坐标 x 处射出一支箭，若有一个气球的直径的开始和结束坐标为 xstart，xend， 且满足  xstart ≤ x ≤ xend，则该气球会被引爆。可以射出的弓箭的数量没有限制。 弓箭一旦被射出之后，可以无限地前进。我们想找到使得所有气球全部被引爆，所需的弓箭的最小数量。
+
+给你一个数组 points ，其中 points [i] = [xstart,xend] ，返回引爆所有气球所必须射出的最小弓箭数。
+
+```
+示例 1：
+
+输入：points = [[10,16],[2,8],[1,6],[7,12]]
+输出：2
+解释：对于该样例，x = 6 可以射爆 [2,8],[1,6] 两个气球，以及 x = 11 射爆另外两个气球
+```
+
+```java
+ /**
+     * 用最少数量的箭引爆气球
+     * 在二维空间中有许多球形的气球。对于每个气球，提供的输入是水平方向上，气球直径的开始和结束坐标。由于它是水平的，所以纵坐标并不重要，因此只要知道开始和结束的横坐标就足够了。开始坐标总是小于结束坐标。
+     *
+     * 一支弓箭可以沿着 x 轴从不同点完全垂直地射出。在坐标 x 处射出一支箭，若有一个气球的直径的开始和结束坐标为 xstart，xend， 且满足  xstart ≤ x ≤ xend，则该气球会被引爆。可以射出的弓箭的数量没有限制。 弓箭一旦被射出之后，可以无限地前进。我们想找到使得所有气球全部被引爆，所需的弓箭的最小数量。
+     *
+     * 给你一个数组 points ，其中 points [i] = [xstart,xend] ，返回引爆所有气球所必须射出的最小弓箭数。
+     *
+     *
+     * 示例 1：
+     *
+     * 输入：points = [[10,16],[2,8],[1,6],[7,12]]
+     * 输出：2
+     * 解释：对于该样例，x = 6 可以射爆 [2,8],[1,6] 两个气球，以及 x = 11 射爆另外两个气球
+     *
+     *
+     * 思路:最少的箭,射爆更多的气球(贪心)
+     *
+     * 每个气球都有边界,这里按照左边界开始排序,从小到大,遇到相同左边界的,按照右边界小的在前.
+     * 根据气球的右边界来判断,若当前气球的左边界大于上一个气球的右边界说明当前的箭射不到当前所在气球的为止,需要加一个箭
+     * 从第一个气球开始配置一个箭,每次遍历时将右边界更新数值,以更小的边界为主.可以自己画一画就知道为什么要更新更小的边界值
+     * {{9,12},{1,10},{4,11},{8,12},{3,9},{6,9},{6,7}};
+     * @param points
+     * @return
+     */
+    public static int findMinArrowShots(int[][] points) {
+        if (points.length == 0){
+            return 0;
+        }
+        //排序
+        Arrays.sort(points,(Comparator<int[]>) (o1, o2) ->{
+            if (o1[0] == o2[0]){
+                return   o1[1] - o2[1];
+            }else if ( o1[0] > o2[0]){
+                return 1;
+            }else {
+                return  -1;
+            }
+        });
+
+
+
+        int arrow = 1;
+
+        //从第一只气球开始配一只箭
+        for (int i = 1; i < points.length ; i++) {
+            //从第一只气球的右边界开始,发现有没有在这个边界范围内的气球,若有归属统一只箭:被射爆
+            if (points[i][0] > points[i-1][1]){
+                //超出弓箭的范围了
+                arrow++;
+            }else{
+                //没有超出范围,把当前points[i][1]的值更新,选择更小的范围,因为当中排序后的气球可能会出现内嵌的情况(范围小的)
+                //根据范围小的来决定
+                points[i][1] = Math.min(points[i][1],points[i-1][1]);
+            }
+        }
+
+        return arrow;
+    }
+```
+
+
+
+
+
+
+
+##### [无重叠区间](https://leetcode-cn.com/problems/non-overlapping-intervals/)给定一个区间的集合，找到需要移除区间的最小数量，使剩余区间互不重叠。
+
+注意:
+
+可以认为区间的终点总是大于它的起点。
+区间 [1,2] 和 [2,3] 的边界相互“接触”，但没有相互重叠。
+
+```
+输入: [ [1,2], [2,3], [3,4], [1,3] ]
+
+输出: 1
+
+解释: 移除 [1,3] 后，剩下的区间没有重叠。
+```
+
+```java
+ /**
+     * 无重叠区间
+     * 给定一个区间的集合，找到需要移除区间的最小数量，使剩余区间互不重叠。
+     *
+     * 注意:
+     *
+     * 可以认为区间的终点总是大于它的起点。
+     * 区间 [1,2] 和 [2,3] 的边界相互“接触”，但没有相互重叠。
+     *
+     *
+     * 这道题目把重复的区域删除,记录删除次数
+     * 我是按照右边界来排序,从小到大,右边界越大表明可能产生重复区域的可能性越大
+     *
+     * 设立一个左边界left标识,右边界right标识,若有存在于当前范围内的区间说明有重叠需要删除,
+     * @param intervals
+     * @return
+     */
+    public static int eraseOverlapIntervals(int[][] intervals) {
+        //排序
+        // 照右边界来排序,从小到大
+        Arrays.sort(intervals,(Comparator<int[]>) (o1,o2) ->{
+            if (o1[1] > o2[1]){
+                return 1;
+            }else if (o1[1] < o2[1]){
+                return -1;
+            }else {
+                return  0;
+            }
+        });
+
+
+        int count = 0;
+        //左边界标识
+        int left = intervals[0][0] ;
+        //右边界标识
+        int right = intervals[0][1] ;
+
+        for (int i = 1; i < intervals.length ; i++) {
+            //存在重叠
+            if (intervals[i][0] < right ){
+                //删除计数
+                count++;
+                //跳出本次循环
+                continue;
+            }
+            //取更小的边界
+            left =Math.min(left,intervals[i][0]);
+            //更新右边界范围
+            right =Math.max(right,intervals[i][1]);
+        }
+
+
+        return  count;
+    }
+```
+
