修改过后的学习资料

--- a/notes/力扣刷题.md
+++ b/notes/力扣刷题.md
@@ -11627,6 +11627,8 @@ public class Solution {
             //判断当前元素是否重复，若重复，更新j的坐标，重新计算
             if(map.containsKey(arr[i])){
                 //这里j要比较取最大，防止之前已经放入过的元素，下标被调用，导致长度发生变化
+                //这里出现重复，这样做是为了在重复的元素所在第一位的的下标的后一位重新开始计数，寻找最大的无重复子数组。
+                //[1,2,3,4,1,5,6,7,8,1]
                 j = Math.max(map.get(arr[i])+1,j);
             }
             
