--- a/notes/消息队列.md
+++ b/notes/消息队列.md
@@ -209,7 +209,7 @@
 
 #### 消费消息
 
-消费者从Broker中拿到消息后写入内存就进行返回，机器宕机的这样情况，很可能造成数据的丢失，因此需要等待消费者消费完毕后才进行返回，这样就能保证数据完成性。
+消费者从Broker中拿到消息后写入内存就进行返回，机器宕机的这样情况，很可能造成数据的丢失，因此需要等待消费者消费完毕后才进行返回，这样就能保证数据完整性。
 
 
 
@@ -233,7 +233,7 @@
 
 绝大部分的有序需求就是：部分有序。
 
-将Topic中划分成我们需要的队列数，通过不同策略将对应的消息传到对应的队列中，每个队列对应一个担心成的消费者。
+将Topic中划分成我们需要的队列数，通过不同策略将对应的消息传到对应的队列中，每个队列对应一个单线程的消费者。
 
 能够保证保证部分有序的需求，又提高了并发量。
 
