--- a/notes/计算机网络基础.md
+++ b/notes/计算机网络基础.md
@@ -166,7 +166,7 @@ TCP的握手就和两军之间通讯类似。
 
    **seq**: seq = u +1
 
-   客户端进入Time-Wait状态，**注意：此时TCP连接还没有释放掉，必须经过2 * MSL（最长报文段寿命）的时间后，当客户端撤销相应的TCB后，才进入Closed状态。**
+   客户端进入Time-Wait状态，**注意：此时TCP连接还没有释放掉，必须经过2 * MSL（最长报文段寿命）的时间后，当客户端撤销相应的TCP后，才进入Closed状态。**
 
    服务器接收到客户端发出的确认，立刻进入Closed状态。
 
@@ -380,7 +380,7 @@ windows中的位置：C:\windows\System32\drivers\etc\hosts
 
 ​	分布式
 
-
+ 
 
 **DNS作用**
 
