--- a/notes/设计模式.md
+++ b/notes/设计模式.md
@@ -32,7 +32,7 @@
 
 3. **行为型**模式
 
-   负责对象间的高效沟通和职责委派。
+   负责对象间的高效沟通和职责委派
 
 <img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20210911162726104.png" alt="image-20210911162726104" style="zoom: 80%;" />
 
@@ -813,7 +813,7 @@ public class databaseModel {
 
 ### 动态代理
 
-动态代理不同于静态代理，**不存代理类的字节码文件**，它是由JVM在运行期间通过**反射**等机制动态生成的。
+动态代理不同于静态代理，**不存在代理类的字节码文件**，它是由JVM在运行期间通过**反射**等机制动态生成的。
 
 因此动态代理中**代理类和目标类**之间的关系是在运行时确定的。
 
@@ -1067,7 +1067,7 @@ A同学帮B同学交作业
    public class CglibTest {
    
        public static void main(String[] args) {
-   //CGLIB采用加强者Enhander，通过设置超类的方法（setSuperclass），然后通过setCallBack方法设置哪个类为它的代理类。
+   //CGLIB采用加强者Enhancer，通过设置超类的方法（setSuperclass），然后通过setCallBack方法设置哪个类为它的代理类。
            //CGLIB enhancer增强类对象，创建增强器
            Enhancer enhancer = new Enhancer();
            //设置设置父类(目标)
