本地文件更新

--- a/notes/消息队列.md
+++ b/notes/消息队列.md
@@ -26,7 +26,7 @@
 
   1. 通过串行方法进行处理
 
-     <img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010102255275.png" alt="image-20211010102255275" style="zoom:80%;" />
+     <img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010102255275.png" alt="image-20211010102255275" style="zoom:80%;" />
 
      假设不考虑网络延迟，每个过程都需要10s，整个过程从注册发送小心再到返回消息所耗费的时间就是40s
 
@@ -34,7 +34,7 @@
 
   2. 通过并行方法进行处理
 
-     <img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010102511084.png" alt="image-20211010102511084" style="zoom: 67%;" />
+     <img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010102511084.png" alt="image-20211010102511084" style="zoom: 67%;" />
 
      将发送邮件和发送信息并行处理，这里相比于串行处理，所耗费的时间相对减少。整个过程花费30s时间
 
@@ -42,7 +42,7 @@
 
   3. 使用消息队列
 
-     <img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010102824514.png" alt="image-20211010102824514" style="zoom:67%;" />
+     <img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010102824514.png" alt="image-20211010102824514" style="zoom:67%;" />
 
      这里使用消息队列来进行处理，在注册信息写入后，将其加入到消息队列中，因为是异步直接就会将结果返回给客户端。相比于上面其他的过程，它们是同步的一个过程，需要等待服务端返回结果。使用消息队列的优势就在于此，则总的响应时间依赖于写入消息队列的时间，而写入消息队列的时间本身是可以很快的，基本可以忽略不计整个过程也就是花费了20s，速度是串行处理的两倍，是并行处理的1倍。
 
@@ -56,7 +56,7 @@
 
   启动流程：通过图片上传系统进行图片上传，上传完的图片调用人脸识别系统进行识别。
 
-  <img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010132332571.png" alt="image-20211010132332571" style="zoom:80%;" />
+  <img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010132332571.png" alt="image-20211010132332571" style="zoom:80%;" />
 
   该调用方法存在缺点：
 
@@ -69,7 +69,7 @@
 
   采用消息队列让两个系统之间进行 **解耦合**
 
-  <img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010132726325.png" alt="image-20211010132726325" style="zoom:67%;" />
+  <img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010132726325.png" alt="image-20211010132726325" style="zoom:67%;" />
 
   1. 图片上传系统将图片上传后，写入到消息队列中，直接返回图片上传成功信息
   2. 人脸识别系统从消息队列中拿图片进行处理，完成人脸识别的功能。
@@ -83,7 +83,7 @@
 
   场景应用：**购物秒杀活动，短时间内访问量激增，远远超过服务器能够处理的数量，此时就需要使用消息队列来中缓冲**
 
-  <img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010134819236.png" alt="image-20211010134819236" style="zoom: 80%;" />
+  <img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010134819236.png" alt="image-20211010134819236" style="zoom: 80%;" />
 
   通过使用消息队列，将大量的请求先放入当中，服务器按照自己的节奏来处理消息队列中的请求，一定程度上减少了服务器的压力。
 
@@ -97,7 +97,7 @@
 
   采用消息队列
 
-  ![image-20211010135953592](https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010135953592.png)
+  ![image-20211010135953592](https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010135953592.png)
 
   在图片上传、人脸识别系统之间， 图片上传系统是**消息生产者**、人脸识别系统是**消息消费者**。在人脸识别、对账系统之间，人脸识别是**消息生产者**、对账系统是**消息消费者**。
 
@@ -118,7 +118,7 @@
 
 生产者、消息队列、消费者
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010141338768.png" alt="image-20211010141338768" style="zoom: 80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010141338768.png" alt="image-20211010141338768" style="zoom: 80%;" />
 
 生产者生产消息放入到消息队列中，消息队列中可以存放多个生产者生产的消息， 队列中有多个消费者，但是每个消息只能被一个消费者消费，因此多个消费者之间存在竞争关系，被消费的消息不会存在于队列中。
 
@@ -139,7 +139,7 @@
 
 上面提到的 队列模型，一个消息只能被一个消费者所消费。**现在需要保证一个消息能被多个消费者消费，就出现了发布/订阅模型**。
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010143251055.png" alt="image-20211010143251055" style="zoom:80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010143251055.png" alt="image-20211010143251055" style="zoom:80%;" />
 
 生产者生产的消息，放入到**Topic(主题)**中，**所有订阅该Topic的消费者都可以消费这条消息**。
 
@@ -161,11 +161,11 @@
 
 消息从**Producer**发往**Broker**，**Broker**将消息存储至本地，然后**Consumer**从**Broker**拉取消息，或者**Broker**推送消息至**Consumer**，最后消费。
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010144315730.png" alt="image-20211010144315730" style="zoom: 80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010144315730.png" alt="image-20211010144315730" style="zoom: 80%;" />
 
 为了提高**并发度**，在发布/订阅模型中Topic中区域中加入了**队列或分区**，**这里队列和分区是同一个，只是叫法不同，在不同的消息队列中`RocketMQ`中叫队列，`Kafka`叫分区，本质一样。**
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010145314162.png" alt="image-20211010145314162" style="zoom:80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010145314162.png" alt="image-20211010145314162" style="zoom:80%;" />
 
 在Topic中加入两个队列，这个主题的并发度就是2，同时可以有两个消费者**并行消费该主题的消息**
 
@@ -187,7 +187,7 @@
 
 我们一般采用消息队列都是第三方的消息队列，RabbitMQ,RocketMQ等等，只要配置得当就不会出现消息丢失的情况。
 
-![image-20211010150349749](https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010150349749.png)
+![image-20211010150349749](https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010150349749.png)
 
 从理论上来看，分为三个阶段：**生产者生产消息、消息队列存储消息、消费者消费消息**，从这三个阶段来保证消息不丢失。
 
@@ -227,7 +227,7 @@
 
 保证全局的有序，保证只有一个生产者往Topic发送消息，并且该Topic中只有一个队列，对应的消费这也是单线程。
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010153324058.png" alt="image-20211010153324058" style="zoom:80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010153324058.png" alt="image-20211010153324058" style="zoom:80%;" />
 
 #### 部分有序
 
@@ -237,7 +237,7 @@
 
 能够保证保证部分有序的需求，又提高了并发量。
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211010153738502.png" alt="image-20211010153738502" style="zoom:80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010153738502.png" alt="image-20211010153738502" style="zoom:80%;" />
 
 ### 如何处理消息堆积
 
