--- a/notes/设计模式.md
+++ b/notes/设计模式.md
@@ -34,7 +34,7 @@
 
    负责对象间的高效沟通和职责委派
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20210911162726104.png" alt="image-20210911162726104" style="zoom: 80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20210911162726104.png" alt="image-20210911162726104" style="zoom: 80%;" />
 
 
 
@@ -106,7 +106,7 @@
 
 ### 单例模式结构
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211008151053289.png" alt="image-20211008151053289" style="zoom: 80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211008151053289.png" alt="image-20211008151053289" style="zoom: 80%;" />
 
 构建一个单例类
 
@@ -294,7 +294,7 @@ public class databaseModel {
 
 ### 工厂模式构建
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211009100659464.png" alt="image-20211009100659464" style="zoom: 80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211009100659464.png" alt="image-20211009100659464" style="zoom: 80%;" />
 
 
 
@@ -502,11 +502,11 @@ public class databaseModel {
 
 **抽象工厂模式结构**
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211009151337182.png" alt="image-20211009151337182" style="zoom: 67%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211009151337182.png" alt="image-20211009151337182" style="zoom: 67%;" />
 
 这里通过多种类型家具案例来说明一下抽象工厂
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211009151431527.png" alt="image-20211009151431527" style="zoom:67%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211009151431527.png" alt="image-20211009151431527" style="zoom:67%;" />
 
 1. **创建产品接口（抽象产品）：椅子接口、沙发接口**
 
@@ -664,13 +664,13 @@ public class databaseModel {
 
 如果当前访问需要消耗巨大的资源并且该服务并不常用，每次都是这样，这样的设计就会导致资源浪费。
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211008101257745.png" alt="image-20211008101257745" style="zoom:67%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211008101257745.png" alt="image-20211008101257745" style="zoom:67%;" />
 
 **可以尝试通过延迟初始化来解决，在需要的时候进行初始化对象，但是对于多个客户端都要添加延迟初始化的代码，加重了代码的复杂度和重复性**
 
 这里就使用到了代理来解决这样的问题，通过建立一个代理类，该代理类与**原目标类（委托类）**实现同样的**接口**。当客户端发来请求时，由代理类生成代理对象来处理请求，客户端并不知道具体谁接收了请求，它只关心返回的结果。
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211008103349057.png" alt="image-20211008103349057" style="zoom:67%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211008103349057.png" alt="image-20211008103349057" style="zoom:67%;" />
 
 这样做的好处在于：对于一些需要在主要业务逻辑前后做一些操作时，就可以不需要修改类完成这样的需求（**Spring AOP就采用了这样的代理模式**）。
 
@@ -678,7 +678,7 @@ public class databaseModel {
 
 ### 代理模式结构
 
-<img src="https://gitee.com/zhanghui2233/image-storage-warehouse/raw/master/img//image-20211008103630559.png" alt="image-20211008103630559" style="zoom: 80%;" />
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211008103630559.png" alt="image-20211008103630559" style="zoom: 80%;" />
 
 上面是基于接口的代理模式，代理接口、代理类、目标类(委托类)
 
