--- a/notes/力扣刷题.md
+++ b/notes/力扣刷题.md
@@ -748,7 +748,8 @@ num %2 == 1  **等价于**   num & 1 == 1
 
 但是实际上在使用桶排序的过程中，我们会使用类似散列表的方式去实现，这时的空间利用率会高很多，同时时间复杂度会有一定的提升，但是效率还不错。
 
-
+**稳定**：如果a原本在b前面，而a=b时，排序之后a仍然在b的前面。
+**不稳定**：如果a原本在b的前面，而a=b时，排序之后a可能出现在b的后面。
 
 | 排序算法     | 平均时间复杂度 | 最坏时间复杂度 | 空间复杂度 | 是否稳定 |
 | ------------ | -------------- | -------------- | ---------- | -------- |
