--- a/notes/力扣刷题.md
+++ b/notes/力扣刷题.md
@@ -1173,6 +1173,10 @@ while (left < right && nums[right] == nums[right - 1])
             // 正常情况下，dir值不变就表示没有发生越界或者数组已经走过的情况
             if ( nextCol >= colLength || nextRow >= rowLength  || nextCol < 0 || nextRow < 0 || supportMatrix[nextRow][nextCol] == Integer.MAX_VALUE){
                 //四种方向
+                // dir = 0 ， (dir + 1) % 4 = 1，表明下一个方向时从上往下
+                // dir = 1 ， (dir + 1) % 4 = 2，表明下一个方向时从右往左
+                // dir = 2 ， (dir + 1) % 4 = 3，表明下一个方向时从下往上
+                // dir = 3 ， (dir + 1) % 4 = 0，表明下一个方向时从左往右
                 dir = (dir + 1) % 4;
             }
 
