学习资料更新

--- a/notes/力扣刷题.md
+++ b/notes/力扣刷题.md
@@ -1609,6 +1609,52 @@ tmp指针作为下一个翻转元素依据点
 
 
 
+##### [两两交换链表中的节点](https://leetcode.cn/problems/swap-nodes-in-pairs/)
+
+给你一个链表，两两交换其中相邻的节点，并返回交换后链表的头节点。你必须在不修改节点内部的值的情况下完成本题（即，只能进行节点交换）。
+
+<img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/202301171431840.png" alt="image-20230117143100648" style="zoom:80%;" />
+
+```
+输入：head = [1,2,3,4]
+输出：[2,1,4,3]
+```
+
+```java
+public static ListNode function1(ListNode listNode){
+    //本地就需要定义一个虚结点，方便两个结点两两交换
+    ListNode dummyNode = new ListNode();
+    dummyNode.node = listNode;
+    ListNode cur = dummyNode;
+
+    //本题需要考虑到边界问题，结点两两交换涉及到奇数偶数问题
+    //偶数情况：cur.next != null
+    //奇数情况：cur.next.next != null
+    //这两个中情况需要需要顺序，先偶数后奇数，不然会导致空指针问题
+    while (cur.node != null && cur.node.node != null){
+        //数据两两交换,记录数据next值
+        //虚结点->1->2->3
+        //tmp2表示第二个数的后一位:3
+        ListNode tmp2 = cur.node.node.node;
+        //tmp1表示第二个数的后一位:1
+        ListNode tmp1 = cur.node;
+        //开始交换,虚结点->2
+        cur.node = cur.node.node;
+        //虚结点->2->1
+        cur.node.node = tmp1;
+        //虚结点->2->1->3
+        tmp1.node = tmp2;
+        //移动虚结点cur
+        cur = cur.node.node;
+    }
+    return dummyNode.node;
+}
+```
+
+
+
+
+
 ##### [删除链表的倒数第 N 个结点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/)
 
  给你一个链表，删除链表的倒数第 `n` 个结点，并且返回链表的头结点。 
@@ -1662,6 +1708,81 @@ pre.next = pre.next.next;
 
 return node.next;
 ```
+
+
+
+
+
+##### [链表相交](https://leetcode.cn/problems/intersection-of-two-linked-lists-lcci/)
+
+给你两个单链表的头节点 `headA` 和 `headB` ，请你找出并返回两个单链表相交的起始节点。如果两个链表没有交点，返回 `null` 。
+
+![image-20230117151903558](https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/202301171519717.png)
+
+```
+输入：intersectVal = 8, listA = [4,1,8,4,5], listB = [5,0,1,8,4,5], skipA = 2, skipB = 3
+输出：Intersected at '8'
+解释：相交节点的值为 8 （注意，如果两个链表相交则不能为 0）。
+从各自的表头开始算起，链表 A 为 [4,1,8,4,5]，链表 B 为 [5,0,1,8,4,5]。
+在 A 中，相交节点前有 2 个节点；在 B 中，相交节点前有 3 个节点。
+```
+
+```java
+        //计算两个链表的长度，算出长度差length，让长度长的一方移动length
+        //此时，两个链表的位置相同，同时往后移动，比较是否存在相同位置数值相同（相交）
+        //存在返回当前位置，不存在返回null
+            public static ListNode function2(ListNode listNodeA,ListNode listNodeB){
+        //优化写法
+        int lengthA = 0;
+        int lengthB = 0;
+
+        ListNode curA = listNodeA;
+        ListNode curB = listNodeB;
+
+        while (curA != null){
+            lengthA++;
+            curA = curA.node;
+        }
+
+        while (curB != null){
+            curB = curB.node;
+            lengthB++;
+        }
+
+        curA = listNodeA;
+        curB = listNodeB;
+        //在判断两个链表哪一个长的情况下，可以将listNodeA认为是最长的链表
+        //实际情况下，若listNodeA不是最长链表，通过交换将listNodeA转换成最长的，避免了重复操作
+        if (lengthB > lengthA){
+            //交换链表A\B的长度
+            int tmpLength = lengthA;
+            lengthA = lengthB;
+            lengthB = tmpLength;
+            //交换链表A\B的头结点指向
+            ListNode tmpNode = curA;
+            curA = curB;
+            curB = tmpNode;
+        }
+
+        //以下就是以listNodeA > listNodeB的情况来执行
+        int length = lengthA - lengthB;
+
+        while (length-- > 0){
+            curA = curA.node;
+        }
+
+        while (curA != null){
+            if (curA == curB){
+                return curA;
+            }
+            curA = curA.node;
+            curB = curB.node;
+        }
+        return null;
+    }
+```
+
+
 
 
 
