学习资料更新

--- a/notes/消息队列.md
+++ b/notes/消息队列.md
@@ -28,7 +28,7 @@
 
      <img src="https://picturebedzhanghui.oss-cn-hangzhou.aliyuncs.com/img/image-20211010102255275.png" alt="image-20211010102255275" style="zoom:80%;" />
 
-     假设不考虑网络延迟，每个过程都需要10s，整个过程从注册发送小心再到返回消息所耗费的时间就是40s
+     假设不考虑网络延迟，每个过程都需要10s，整个过程从注册发送消息再到返回消息所耗费的时间就是40s
 
      
 
@@ -241,7 +241,7 @@
 
 ### 如何处理消息堆积
 
-消息堆积的原因在于：**生产者生产速率于消费者消费速率不平衡导致**。
+消息堆积的原因在于：**生产者生产速率与消费者消费速率不平衡导致**。
 
 首先我们要定位 **消费慢的原因**。如果是bug则处理bug。如果是消费者本身的原因，我们可以通过优化逻辑来增加消费者消费速率。
 
