--- a/notes/设计模式.md
+++ b/notes/设计模式.md
@@ -8,7 +8,7 @@
 
 设计模式是软件设计中**常见问题的解决方案**，能够**根据需求**进行调整的**预制蓝图**，通过设计模式能够让代码更好的被人理解，提高重复利用率，用于解决代码中反复出现的设计问题。
 
-这里把**算法**和**设计模式**放在一起来说，算法和模式在概念上都对特定问题的典型解决方案。
+这里把**算法**和**设计模式**放在一起来说，算法和模式在概念上都对 特定问题的典型解决方案。
 
 算法更像是**菜谱**：明确标明解决方案的具体流程步骤。而设计模式更像是**蓝图**：标明一个方案的结果和功能，具体的过程需要去实现。
 
@@ -70,7 +70,7 @@
 
 ### 迪米特法则（最少知道原则）
 
-原理思想：一个对象应该尽可能少的了解其他对象，这里的了解只的是一个对象对于其他对象的依赖度，程序的设计目标就是：高内聚低耦合。模块和模块之间的依赖关系越紧密，耦合度越高，因此不要让两个模块直接建立联系，通过其他方式形成一种间接的访问，提高模块的重复利用率
+原理思想：一个对象应该尽可能少的了解其他对象，这里的了解指的是一个对象对于其他对象的依赖度，程序的设计目标就是：高内聚低耦合。模块和模块之间的依赖关系越紧密，耦合度越高，因此不要让两个模块直接建立联系，通过其他方式形成一种间接的访问，提高模块的重复利用率
 
 
 
@@ -364,7 +364,7 @@ public class databaseModel {
 
    ```java
    /**
-    * 调用者调用
+    * 调用者 输入他们想要的东西，通过工厂生产返回给调用者，因此这里工厂创建对象时不会对调用者暴露创建逻辑
     */
    public class client {
        public static void main(String[] args) {
@@ -541,6 +541,17 @@ public class databaseModel {
            System.out.println("维多利亚类型椅子");
        }
    }
+   
+   /**
+    * 具体产品
+    * 维多利亚类型沙发
+    */
+   public class victoriaSofa implements chair{
+       @Override
+       public void describe() {
+           System.out.println("维多利亚类型沙发");
+       }
+   }
    ```
 
    ```java
@@ -552,6 +563,18 @@ public class databaseModel {
        @Override
        public void describe() {
            System.out.println("装饰风格类型椅子");
+       }
+   }
+   
+   
+   /**
+    * 具体产品
+    * 装饰风格类型沙发
+    */
+   public class artDecoSofa implements chair {
+       @Override
+       public void describe() {
+           System.out.println("装饰风格类型沙发");
        }
    }
    ```
@@ -591,7 +614,7 @@ public class databaseModel {
    }
    ```
 
-   ```
+   ```java
    /**
     * 具体工厂 根据抽象工厂的接口来实现对应的具体类型家具
     */
@@ -608,20 +631,39 @@ public class databaseModel {
    }
    ```
 
+   
+
 5. **测试**
 
    ```java
    public class client1 {
        public static void main(String[] args) {
-           //客户端通过具体工厂方法创建想要的对应类型家具即可
-           VictorianFactory victorianFactory = new VictorianFactory();
-           victorianFactory.createChair().describe();
-           victorianFactory.createSofa().describe();
+               //客户端输入信息
+               String tmp = "椅子";
+       //        String tmp = "沙发";
+               int type = 2;
+       //        int type = 1;
    
+               //1.维多利加 2.装饰风格类型
+               if (type == 1){
+                   if (tmp.equals("椅子")){
+                       chair = new VictorianFactory().createChair();
+                       chair.describe();
+                   }else {
+                       sofa = new VictorianFactory().createSofa();
+                       sofa.describe();
+                   }
+               }else{
+                   if (tmp.equals("沙发")){
+                       sofa = new artDecoFactory().createSofa();
+                       sofa.describe();
+                   }else {
+                       chair = new artDecoFactory().createChair();
+                       chair.describe();
+                   }
+               }
+           }
    
-           artDecoFactory artDecoFactory = new artDecoFactory();
-           artDecoFactory.createChair().describe();
-           artDecoFactory.createSofa().describe();
        }
    }
    ```
@@ -684,7 +726,19 @@ public class databaseModel {
 
 根据代理类的**生成时间**可以将代理类分为**静态代理**和**动态代理**
 
+**1.代理模式的优缺点?**
 
+优点
+
+协调调用者和被调用者，降低了系统的耦合度
+
+代理对象作为客户端和目标对象之间的中介，起到了保护目标对象的作用
+
+缺点
+
+由于在客户端和真实主题之间增加了代理对象，因此会造成请求的处理速度变慢;
+
+实现代理模式需要额外的工作(有些代理模式的实现非常复杂)，从而增加了系统实现的复杂度。
 
 ### 静态代理
 
@@ -812,6 +866,8 @@ public class databaseModel {
 
 
 ### 动态代理
+
+http://www.bjpowernode.com/javazixun/10646.html
 
 动态代理不同于静态代理，**不存在代理类的字节码文件**，它是由JVM在运行期间通过**反射**等机制动态生成的。
 
