--- a/notes/力扣刷题.md
+++ b/notes/力扣刷题.md
@@ -646,7 +646,7 @@ num %2 == 1  **等价于**   num & 1 == 1
   /**
      * 归并排序
      *三步骤:分割、排序+合并
-     * 分割：将序列每次分为原来的一般，直到将数组分为一个一个独立的序列
+     * 分割：将序列每次分为原来的一半，直到将数组分为一个一个独立的序列
      * 排序+合并：在分割后的基础上，将一个一个分散的序列，排序后合并到一起
      */
     public static  void mergeSort(int[] waitSortList,int[] res,int left , int right){
