--- a/notes/计算机网络基础.md
+++ b/notes/计算机网络基础.md
@@ -238,13 +238,15 @@ SSH (安全shell协议) ：22
 
 telnet (远程登录协议)：23
 
+SMTP (简单邮件传输协议)： 25
+
 DNS (域名系统)：53
 
 http (超文本传输协议)：80
 
-SMTP (简单邮件传输协议)： 25
-
 POP3 (邮局协议3代)： 110
+
+https的端口号默认：443
 
 
 
