--- a/notes/设计模式.md
+++ b/notes/设计模式.md
@@ -54,9 +54,9 @@
 
 ### 里氏替换原则
 
-原则思想：使用子类来对父类的功能进行扩展，但是不能改变父类原有的功能。子类可以实现父类的抽象方法，但是不能够覆盖父类的非抽象方法，子类可以有自己的方法。
+原则思想：一个对象在其出现的任何地方，都可以用子类实例做替换，并且不会导致程序的错误。**简单地说：所有父类能出现的地方，子类就可以出现，并且替换了也不会出现任何错误。对使用者来说，能够使用父类的地方，一定可以使用其子类，并且预期结果是一致的。**
 
-优点：增加程序的健壮性，即使增加了子类，原有的子类还可以继续运行，互不影响。
+优点：增加程序的健壮性，即使使用子类替换父类，程序的结果依然一致。
 
 ### 依赖倒转原则
 
@@ -546,7 +546,7 @@ public class databaseModel {
     * 具体产品
     * 维多利亚类型沙发
     */
-   public class victoriaSofa implements chair{
+   public class victoriaSofa implements sofa{
        @Override
        public void describe() {
            System.out.println("维多利亚类型沙发");
@@ -571,7 +571,7 @@ public class databaseModel {
     * 具体产品
     * 装饰风格类型沙发
     */
-   public class artDecoSofa implements chair {
+   public class artDecoSofa implements sofa {
        @Override
        public void describe() {
            System.out.println("装饰风格类型沙发");
